# aivideostudio

./: .gitignore  ROADMAP.md  _new_request.py  check_and_push.py  check_apply_all.py  check_indent.py  check_mw.py  check_pe_state.py  check_pe_state2.py  check_reset_buttons.py  create_subtitle_dialog.py  debug_ass.py  debug_runtime.py  debug_thumb2.py  debug_tp_class.py  diag_clip_data.py  diag_clip_paint.py  diag_current_state.py  diag_default_style.py  diag_export.py  diag_export2.py  diag_export_info.py  diag_hardcoded_paths.py  diag_lock.py  diag_lock2.py  diag_on_export.py  diag_pe_query.py  diag_pip.py  diag_pip2.py  diag_pip3.py  diag_pip_hardcode.py  diag_preview_pip.py  diag_restore.py  diag_restore2.py  diag_save_export2.py  diag_segments.py  diag_serialize.py  diag_subtitle_dialog.py  diag_subtitle_issues.py  diag_subtitle_system.py  (+43 more)
aivideostudio/: app.py  config.py  main.py
aivideostudio/core/: keyframe.py  playback_engine.py  project.py  undo_manager.py
aivideostudio/engines/: export_engine.py  ffmpeg_engine.py  subtitle_engine.py  thumbnail_engine.py  tts_engine.py  waveform_engine.py  whisper_worker.py
aivideostudio/gui/: main_window.py  menu_bar.py  shortcuts.py  toolbar.py
aivideostudio/gui/dialogs/: subtitle_edit_dialog.py
aivideostudio/gui/panels/: asset_panel.py  export_panel.py  inspector_panel.py  preview_panel.py  subtitle_panel.py  timeline_panel.py  tts_panel.py
aivideostudio/gui/styles/: dark_theme.qss
aivideostudio/utils/: ffprobe.py  gpu_detect.py  time_utils.py
